--- a/demo.html
+++ b/demo.html
@@ -282,7 +282,7 @@
                 <!--material="shader: gif; src: #po1;"-->
       <!--&gt;</a-plane>-->
       <a-entity></a-entity>
-      <a-video geometry="height: 2; width: 1.7" rotation="0 -90" position="1.563 1.754 0.113"
+      <a-video id ="videofloor" geometry="height: 1.75; width: 1.9" rotation="0 -90" position="1.563 1.754 0.113"
               src ='#floor_0Video'
       ></a-video>
       <a-plane id="floor" position="0 0 -4"  static-body rotation="-90 0" width="6" height="11" color="#7BC8A4" class="collidable" geometry="" material=""></a-plane>
