--- a/demo.html
+++ b/demo.html
@@ -97,6 +97,15 @@
               console.log(intersection.point);
           }
       });
+      AFRAME.registerComponent('click-one', {
+          init: function () {
+              // Use events to figure out what raycaster is listening so we don't have to
+              // hardcode the raycaster.
+              this.el.addEventListener('click', evt => {
+                  this.el.removeAttribute('data-clickable');
+              });
+          }
+      });
       AFRAME.registerComponent('door-model', {
           schema: {
               value: {default: 0},
@@ -202,6 +211,7 @@
         <video id="floor_2Video" autoplay loop="true" src="assets/video/floor_2.mp4"></video>
         <video id="floor_0Video" autoplay loop="true" src="assets/video/floor_0.mp4"></video>
         <video id="floor_-1Video" autoplay loop="true" src="assets/video/floor_-1.mp4"></video>
+        <video id="scanVideo" autoplay loop="true" src="assets/video/scan.mp4"></video>
       </a-assets>
 
       <a-entity id="voice-1" sound="src: #voice-1Wav; positional: false"></a-entity>
@@ -271,55 +281,62 @@
           <a-entity scale="1 1 0.196" text="width: 0.5; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: o; anchor: left; color: #59dff7" position="0.221 -0.09827‬"></a-entity>
           <a-entity scale="1 1 0.196" text="width: 1.4; font: assets/fonts/DejaVu-sdf.fnt; fontImage: assets/fonts/DejaVu-sdf.png; value: F; anchor: left; color: #59dff7" position="0.242 -0.11019‬"></a-entity>
         </a-entity>
-        <a-entity id="floor_2" button_floor="value: 2" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/3rdfloor.png" position="-0.12935 0.14 0.00149"
+        <a-entity id="floor_2" data-clickable button_floor="value: 2" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/3rdfloor.png" position="-0.12935 0.14 0.00149"
                   event-set__click="clicked:true">
           <a-entity class="hightlight" mixin="hightlight"></a-entity>
           <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
-        <a-entity id="floor_1" button_floor="value: 1"  geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/2ndfloor.png" position="-0.12935 0.045 0.00149">
+        <a-entity id="floor_1" data-clickable button_floor="value: 1"  geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/2ndfloor.png" position="-0.12935 0.045 0.00149">
           <a-entity class="hightlight" mixin="hightlight"></a-entity>
           <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
-        <a-entity id="floor_0" button_floor="value: 0" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Ground.png" position="-0.12935 -0.05 0.00149">
+        <a-entity id="floor_0" data-clickable button_floor="value: 0" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Ground.png" position="-0.12935 -0.05 0.00149">
           <a-entity class="hightlight" mixin="hightlight"></a-entity>
           <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
-        <a-entity id="floor_-1" button_floor="value: -1" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Basement.png" position="-0.12935 -0.145 0.00149">
+        <a-entity id="floor_-1" data-clickable button_floor="value: -1" geometry="primitive: plane; height: 0.067; width: 0.159" scale="" material="transparent: true; src: assets/images/Basement.png" position="-0.12935 -0.145 0.00149">
           <a-entity class="hightlight" mixin="hightlight"></a-entity>
           <a-entity class="description" mixin="description"></a-entity>
         </a-entity>
-        <a-entity id="open_btn" geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/door_open.png" position="-0.181 -0.261 0.00149"
+        <a-entity id="open_btn" data-clickable geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/door_open.png" position="-0.181 -0.261 0.00149"
                   event-set__click="event: click;"
         >
           <a-entity class='dleft' geometry="primitive: triangle" rotation="0 0 90" scale="0.036 0.024 0.036" position="-0.02 0 0.001" material=""
-                    visibe =false
+                    visible =false
                     animation__show ="property: position;dur:1000;startEvents: show;pauseEvents: hide;loop:true;easing: linear;from:-0.02 0 0.001;to: -0.04 0 0.001;"
                     event-set__show="_event: show; visible: true"
                     event-set__hide="_event: hide; visible: false"
           ></a-entity>
           <a-entity class='dright' geometry="primitive: triangle" rotation="0 0 -90" scale="0.036 0.024 0.036" position="0.02 0 0.001" material=""
-                    visibe =false
+                    visible =false
                     animation__open ="property: position;dur:1000;startEvents: show;pauseEvents: hide;loop:true;easing: linear;from:0.02 0 0.001;to: 0.04 0 0.001;"
                     event-set__show="_event: show; visible: true"
                     event-set__hide="_event: hide; visible: false"
           ></a-entity>
         </a-entity>
-        <a-entity id="close_btn" geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/door_close.png" position="-0.020 -0.261 0.00149">
+        <a-entity id="close_btn" data-clickable geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/door_close.png" position="-0.020 -0.261 0.00149">
           <a-entity class='dleft' geometry="primitive: triangle" rotation="0 0 -90" scale="0.036 0.024 0.036" position="-0.02 0 0.001" material=""
-                    visibe =false
+                    visible =false
                     animation__show ="property: position;dur:1000;startEvents: show;pauseEvents: hide;loop:true;easing: linear;to:-0.02 0 0.001;from: -0.04 0 0.001;"
                     event-set__show="_event: show; visible: true"
                     event-set__hide="_event: hide; visible: false"
           ></a-entity>
           <a-entity class='dright' geometry="primitive: triangle" rotation="0 0 90" scale="0.036 0.024 0.036" position="0.02 0 0.001" material=""
-                    visibe =false
+                    visible =false
                     animation__open ="property: position;dur:1000;startEvents: show;pauseEvents: hide;loop:true;easing: linear;to:0.02 0 0.001;from: 0.04 0 0.001;"
                     event-set__show="_event: show; visible: true"
                     event-set__hide="_event: hide; visible: false"
           ></a-entity>
         </a-entity>
-        <a-entity id="emergency_btn" button_floor="value: -1" geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/emergencybtn.png" position="0.163 -0.261 0.00149">
+        <a-entity id="emergency_btn" data-clickable button_floor="value: -1" geometry="primitive: plane; height: 0.067; width: 0.067" scale="" material="transparent: true; src: assets/images/emergencybtn.png" position="0.163 -0.261 0.00149">
         </a-entity>
+
+        <a-entity id="sercurityPannel" click-one data-clickable geometry="primitive: plane; height: 0.4; width: 0.48" scale="" material="color: #111111; metalness: 0.74" position="0 0 0.00572"
+                  event-set__click="event: click;visible: false;"
+        >
+          <a-video id="access" position="0 0 0.001" geometry="height: 0.3; width: 0.3" src="#scanVideo" material=""></a-video>
+        </a-entity>
+
       </a-entity>
       <!--<a-plane geometry="height: 2; width: 1.7" rotation="0 -90" position="1.563 1.754 0.113"-->
                 <!--material="shader: gif; src: #po1;"-->
@@ -347,6 +364,7 @@
                 shoot="direction: 0 0 -1; spaceKeyEnabled: true">
         <!--<a-cursor ></a-cursor>-->
         <a-entity cursor="fuse: true; fuseTimeout: 500"
+                  raycaster="objects: [data-clickable]"
                   position="0 0 -1"
                   geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
                   material="color: #f1d507; shader: flat">
